--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,6 +32,9 @@
                 <ul class="navbar-nav nav-underline ms-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'blog-create' %}">Create Blog</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'users-profile' %}">Profile</a>
                         </li>
                         
