--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -12,6 +12,7 @@
             </fieldset>
             <div class="form-group pt-3"> 
                 <button type="submit" class="btn btn-primary">Login</button>
+                <a class="text-decoration-none ml-3" href="{% url 'password_reset' %}">Forget Password?</a>
             </div>
         </form>
         <div class=" bottom-top pt-3">
