--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,7 @@
   <div class="card-body">
     <h2 class="card-title text-center text-decoration-none">{{ post.title }}</h2>
     <hr class="mb-4">
-    <p class="card-text">{{ post.content }}</p>
+    <p class="card-text">{{ post.content|linebreaks }}</p>
 
     <div class="d-flex align-items-center justify-content-between mt-3">
       <div class="d-flex align-items-center">
