--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -16,7 +16,7 @@
         </form>
         <div class=" bottom-top pt-3">
             <small class="text-muted">
-                Already have an account? <a class="ml-2" href="#"> Log in</a>
+                Already have an account? <a class="ml-2" href="{% url 'users-login' %}"> Log in</a>
             </small>
         </div>
     </div>
